--- a/canvas game/style.css
+++ b/canvas game/style.css
@@ -5,6 +5,8 @@
 }
 
 #canvas{
+    position: relative;
+    left: 20vw;
     background-color: black;
     width: 640px;
     height: 480px;
@@ -15,7 +17,8 @@
 
 #player{
     background-color: yellow;
-    position: fixed;
+    border: 2px solid black;
+    position: relative;
     width: 50px;
     height: 50px;
     border-radius: 12px;
